[package]
name = "tdrengine-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = "0.12.0"
hassle-rs = "0.9.0"
rspirv-reflect = "0.7.0"
gpu-allocator = "0.20.0"
tdrengine-common = { path = "../tdrengine-common" }