[package]
name = "tdrengine-shader-compiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hassle-rs = "0.9.0"
rspirv-reflect = "0.7.0"
tdrengine-common = { path = "../tdrengine-common" }

[features]
default = ["vulkan"]
render-api = ["vulkan", "d3d12", "metal", "wgpu"]